--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link 
     href="https://fonts.googleapis.com/css?family=Press+Start+2P" 
     rel="stylesheet"
     />
+
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="C:\Users\rob\projects\DevProject\tetris\Tetris_Starter_Code\node_modules\tailwindcss" 
+    rel="stylesheet">
+
+    
     <title>Have Fun!</title>
 </head>
 <body>
@@ -27,13 +33,21 @@
         </div>
       </div>
       <div class="directional-pad">
+
         <button id="btnUp">Up</button>
         <button id="btnDown">Down</button>
         <button id="btnLeft">Left</button>
         <button id="btnRight">Right</button>
+        <div class="divide-red-600">
         <button id="btnDrop">Drop</button>
         <button id="btnPause">Pause</button>
       </div>
+      </div>
+
+      <!-- move drop and pause buttons and have other buttons like 
+      a dpad for controller. -->
+
+      
             <!-- control for mobile ?
 
       <div class="directional-pad">
@@ -50,4 +64,5 @@
       <script type="text/javascript" src="main.js"></script>
       <script type="text/javascript" src="mobile.js"></script>
 </body>
+
 </html>
